--- a/app/src/main/res/layout/activity_cart.xml
+++ b/app/src/main/res/layout/activity_cart.xml
@@ -4,37 +4,40 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/txtCartHeader"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Giỏ hàng"
-        android:textSize="24sp"
-        android:textStyle="bold"
-        android:textColor="@color/design_default_color_primary"
-        android:gravity="center"
-        android:background="@color/white"
-        android:paddingTop="24dp"
-        android:paddingBottom="16dp"
-        android:elevation="4dp" />
-    <!-- Danh sách sản phẩm trong giỏ -->
-    <ScrollView
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:paddingBottom="80dp"
-        android:layout_marginTop="64dp">
+        android:orientation="vertical">
 
-        <LinearLayout
-            android:id="@+id/cart_list"
+        <TextView
+            android:id="@+id/txtCartHeader"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:padding="12dp">
+            android:text="Giỏ hàng"
+            android:textSize="24sp"
+            android:textStyle="bold"
+            android:textColor="@color/design_default_color_primary"
+            android:gravity="center"
+            android:background="@color/white"
+            android:paddingTop="24dp"
+            android:paddingBottom="16dp"
+            android:elevation="4dp" />
 
-        </LinearLayout>
-    </ScrollView>
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:paddingBottom="80dp">
 
-    <!-- BottomAppBar với nút Thanh toán -->
+            <LinearLayout
+                android:id="@+id/cart_list"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:padding="12dp" />
+        </ScrollView>
+    </LinearLayout>
+
     <com.google.android.material.bottomappbar.BottomAppBar
         android:id="@+id/bottomAppBar"
         android:layout_width="match_parent"
